Thu Apr 22 10:19:41 2004  Chad Elliott  <elliott_c@ociweb.com>

        * utils/NamingViewer/NamingViewer.mpc:

          Added vc8 to the 'specific' section that also has vc71.

Thu Apr 22 09:03:32 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/AV/Nil.{h,cpp}:
          Removed this file. It was empty, is the last issue from
          Bug 1705.

        * orbsvcs/orbsvcs/AV/MCast.cpp:
        * orbsvcs/orbsvcs/AV/RTP.cpp:
        * orbsvcs/orbsvcs/AV/Transport.cpp:
        * orbsvcs/orbsvcs/Makefile.av:
        * orbsvcs/orbsvcs/AV.mpc:
          Removed references to Nil.{h,cpp}:

Thu Apr 22 08:33:11 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/FtRtEvent/Utils/Safe_InputCDR.inl:
          Fixed Tru64 warning

Thu Apr 22 07:51:31 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/LoadBalancing/LB_LoadMinimum.h:
          Fixed include path

Thu Apr 22 06:48:13 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Collocated_Invocation.cpp:
        * tao/Collocated_Invocation.h:
          Swapped the first arguments to target and then effective_target
          so that this matches the signature of the base class.

        * tao/Invocation_Adapter.cpp:
        * tao/Invocation_Adapter.h:
          Updated for the signature change of Collocated_Invocation. Also
          when we have a collocated proxy broker set we could by theory
          use a collocated invocation, so then use
          TAO_ORB_Core::collocation_strategy to see how the collocation
          strategy is set. Dependent on this we do a collocated or remote
          invocation. If is now possible that a remote invocation that
          gets a forward location to a collocated servant now switches
          from the remote invocation path to the collocated invocation path.
          This fixes Bug 1495. Thanks to Bala for helping me with this.

        * TAO_IDL/be/be_interface.cpp: