@@ -1,3 +1,14 @@
+Thu Apr 22 12:43:33 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>
+
+        *
+          orbsvcs/performance-tests/LoadBalancing/LBPerf/RPS/Roundtrip.cpp:
+        * orbsvcs/performance-tests/LoadBalancing/LBPerf/RPS/Roundtrip.h:
+        * orbsvcs/performance-tests/LoadBalancing/LBPerf/RPS/Test.idl:
+        * orbsvcs/performance-tests/LoadBalancing/LBPerf/RPS/client.cpp:
+
+          Made some changes to remove unwanted functions and function
+          arguments.
+
 Thu Apr 22 10:19:41 2004  Chad Elliott  <elliott_c@ociweb.com>
 
         * utils/NamingViewer/NamingViewer.mpc:
